--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
                 </svg>
             </button>
             <div class="dropdown-menu">
-                <div class="dropdown-item">Importing by a file</div>
-                <div class="dropdown-item">Entering manually</div>
+                <a href="nCustUP.html"><div class="dropdown-item">Importing by a file</div></a>
+                <a href="#"><div class="dropdown-item">Entering manually</div></a>
             </div>
         </div>
         <div>
