--- a/index.html
+++ b/index.html
@@ -74,12 +74,14 @@
                         DASHBOARD</li>
                 </div>
                 <div class="list-ele">
-                    <li><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M15.75 14C17.8288 14 18.6802 16.1479 19.0239 17.696C19.2095 18.532 18.5333 19.25 17.6769 19.25H16.75M14.75 10.25C16.2688 10.25 17.25 9.01878 17.25 7.5C17.25 5.98122 16.2688 4.75 14.75 4.75M5.78164 19.25H13.2183C13.7828 19.25 14.227 18.7817 14.1145 18.2285C13.804 16.7012 12.7897 14 9.49996 14C6.21027 14 5.19601 16.7012 4.88545 18.2285C4.77296 18.7817 5.21714 19.25 5.78164 19.25ZM12.25 7.5C12.25 9.01878 11.0187 10.25 9.49996 10.25C7.98117 10.25 6.74996 9.01878 6.74996 7.5C6.74996 5.98122 7.98117 4.75 9.49996 4.75C11.0187 4.75 12.25 5.98122 12.25 7.5Z"
-                                stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                        </svg>
-                        CUSTOMERS</li>
+                    <a href="#">
+                        <li><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M15.75 14C17.8288 14 18.6802 16.1479 19.0239 17.696C19.2095 18.532 18.5333 19.25 17.6769 19.25H16.75M14.75 10.25C16.2688 10.25 17.25 9.01878 17.25 7.5C17.25 5.98122 16.2688 4.75 14.75 4.75M5.78164 19.25H13.2183C13.7828 19.25 14.227 18.7817 14.1145 18.2285C13.804 16.7012 12.7897 14 9.49996 14C6.21027 14 5.19601 16.7012 4.88545 18.2285C4.77296 18.7817 5.21714 19.25 5.78164 19.25ZM12.25 7.5C12.25 9.01878 11.0187 10.25 9.49996 10.25C7.98117 10.25 6.74996 9.01878 6.74996 7.5C6.74996 5.98122 7.98117 4.75 9.49996 4.75C11.0187 4.75 12.25 5.98122 12.25 7.5Z"
+                                    stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                            </svg>
+                            CUSTOMERS</li>
+                    </a>
                 </div>
                 <div class="list-ele">
                     <li><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -190,7 +192,7 @@
             </button>
             <div class="dropdown-menu">
                 <a href="nCustUP.html"><div class="dropdown-item">Importing by a file</div></a>
-                <a href="#"><div class="dropdown-item">Entering manually</div></a>
+                <a href="nCustMan.html"><div class="dropdown-item">Entering manually</div></a>
             </div>
         </div>
         <div>
